--- a/includes/extra-metabox/page-builder/css/extra-page-builder.less
+++ b/includes/extra-metabox/page-builder/css/extra-page-builder.less
@@ -214,7 +214,6 @@
 	background-color: #fff;
 }
 
-
 .layout-choices {
 	overflow: hidden;
 	width: 0;
@@ -225,6 +224,11 @@
 }
 .layout-choices > *:hover {
 	background-color: #f3f3f3;
+}
+
+.extra-page-builder-row .extra-page-builder-row-admin .dodelete {
+	height: 29px;
+	padding-left: 0;
 }
 
 /*******************
