Correct css for extra gallery when not yet instantiated

--- a/assets/css/extra.gallery.less
+++ b/assets/css/extra.gallery.less
@@ -17,6 +17,8 @@
 .extra-slider .wrapper > ul {
 	display: block;
 	list-style: none;
+}
+.extra-slider-processed .wrapper > ul {
 	position: absolute;
 }
 .extra-slider .wrapper > ul > li {
