Conflict with extra icons

--- a/setup/admin/css/adminbar.less
+++ b/setup/admin/css/adminbar.less
@@ -4,7 +4,7 @@
  *
  ********************/
 @font-face {
-	font-family: 'extra';
+	font-family: 'extra-admin';
 	src:url('@{lessurl}/../fonts/extra.eot?-gu365q');
 	src:url('@{lessurl}/../fonts/extra.eot?#iefix-gu365q') format('embedded-opentype'),
 	url('@{lessurl}/../fonts/extra.woff?-gu365q') format('woff'),
@@ -15,7 +15,7 @@
 }
 .extra-icon,
 #wpadminbar .extra-icon {
-	font-family: 'extra';
+	font-family: 'extra-admin';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
