New version of gallery field in metabox

--- a/includes/extra-metabox/css/extra-image-gallery.less
+++ b/includes/extra-metabox/css/extra-image-gallery.less
@@ -26,8 +26,7 @@
 	display: block;
 }
 .extra-metabox .extra-gallery-placeholder {
-//	border: 2px solid #CCCCCC;
-	border: 2px dashed #CCCCCC;
+	outline: 2px dashed #CCCCCC;
 	display: block;
 	width: 150px;
 }
