Updates on the admin styles

--- a/setup/admin/css/style.less
+++ b/setup/admin/css/style.less
@@ -45,6 +45,7 @@ body.login #login h1 a {
 #dashboard-widgets-wrap .empty-container {
 	display: none;
 }
+.metabox-holder .postbox-container .empty-container,
 #cpt_info_box {
 	display: none;
 }
