--- a/assets/css/jquery.fancybox.css
+++ b/assets/css/jquery.fancybox.css
@@ -114,7 +114,7 @@
 	height: 100%;
 	cursor: pointer;
 	text-decoration: none;
-	background: transparent url('../img/fancybox/blank.gif'); /* helps IE */
+	background: transparent url('../img/blank.png'); /* helps IE */
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	z-index: 8040;
 }
